[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Base/door_transition.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Objects/Interactive.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/Flicker2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Props/DoorTransition.gd" type="Script" id=4]
[ext_resource path="res://Assets/Base/light_smol.png" type="Texture" id=5]
[ext_resource path="res://Assets/Base/door_hand_scanner.png" type="Texture" id=6]
[ext_resource path="res://Assets/Base/door_closed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Base/door_name.png" type="Texture" id=8]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 30, 64, 34, 64, 34, -64, 30, -64 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 64 )

[sub_resource type="Animation" id=4]
resource_name = "Open"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("WhenClosed:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -13 ), Vector2( 0, -118 ), Vector2( 0, -128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhenClosed:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MoveBlock/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WhenClosed/Scanner/Interactive:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("WhenClosed/Scanner/Flicker")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_enabled"
}, {
"args": [ false ],
"method": "set_enabled"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WhenClosed/LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "OpenRight"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("WhenClosed:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 13 ), Vector2( 0, 118 ), Vector2( 0, 128 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhenClosed:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MoveBlock/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WhenClosed/Scanner/Interactive:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("WhenClosed/Scanner/Flicker")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_enabled"
}, {
"args": [ false ],
"method": "set_enabled"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WhenClosed/LightOccluder2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WhenClosed:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WhenClosed:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MoveBlock/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WhenClosed/Scanner/Interactive:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="DoorTransition" type="Node2D" groups=["Overrides_footstep", "SAVES"]]
script = ExtResource( 4 )

[node name="TopLeft" type="Position2D" parent="."]
position = Vector2( -24, -64 )
scale = Vector2( 0.617188, 1 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 24, 64 )
scale = Vector2( 0.617188, 1 )

[node name="WhenOpen" type="Sprite" parent="."]
scale = Vector2( 0.617188, 1 )
z_index = -1
texture = ExtResource( 7 )

[node name="WhenClosed" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": "transition door shouldn't have a keypad"
}

[node name="Scanner" type="Sprite" parent="WhenClosed"]
position = Vector2( -19, 39 )
rotation = 1.57079
texture = ExtResource( 6 )

[node name="Interactive" type="Control" parent="WhenClosed/Scanner"]
margin_left = -9.0
margin_top = -9.0
margin_right = 9.0
margin_bottom = 9.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
message = "Leave"

[node name="Flicker" type="Light2D" parent="WhenClosed/Scanner"]
texture = ExtResource( 5 )
texture_scale = 0.1
energy = 0.5
range_z_max = 10
script = ExtResource( 3 )
energy_min = 0.4
energy_max = 0.6

[node name="LightOccluder2D" type="LightOccluder2D" parent="WhenClosed"]
occluder = SubResource( 2 )

[node name="NamePlate" type="Sprite" parent="WhenClosed"]
position = Vector2( -19, -18 )
rotation = 1.57079
texture = ExtResource( 8 )

[node name="Interactive" type="Control" parent="WhenClosed/NamePlate"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
message = "Read"

[node name="DoorCloseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorCloseArea"]
position = Vector2( -19, 0 )
shape = SubResource( 1 )

[node name="MoveBlock" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveBlock"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 4 )
anims/OpenRight = SubResource( 6 )
anims/RESET = SubResource( 5 )

[connection signal="interacted" from="WhenClosed/Scanner/Interactive" to="." method="_on_Interactive_interacted"]
[connection signal="body_exited" from="DoorCloseArea" to="." method="_on_DoorCloseArea_body_exited"]
